2003-09-08  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-file.c: don't store all recurrences in the
	private structure.
	
2003-09-04  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (process_component):
	* gui/e-week-view.c (process_component): dont expand recurrences,
	since they are now expanded by the backends.

2003-09-02    <jpr@ximian.com>

	* gui/tasks-control.c (sensitize_commands): adapt to cal-client
	threaded sync api changes

	* gui/itip-utils.c (itip_organizer_is_user): ditto

	* gui/gnome-cal.c (gnome_calendar_purge): ditto

	* gui/e-meeting-model.c (process_section): ditto

	* gui/e-calendar-table.c (e_calendar_table_show_popup_menu): ditto

	* gui/e-cal-view.c (e_cal_view_create_popup_menu): ditto

	* gui/calendar-commands.c (sensitize_calendar_commands): ditto
	(sensitize_taskpad_commands): ditto

	* gui/dialogs/task-editor.c (set_menu_sens): ditto

	* gui/dialogs/meeting-page.c (meeting_page_construct): ditto

	* gui/dialogs/event-editor.c (set_menu_sens): ditto

	* gui/dialogs/alarm-page.c (add_clicked_cb): ditto

	* conduits/calendar/calendar-conduit.c (pre_sync): convert to
	cal_client api changes

	* conduits/todo/todo-conduit.c (pre_sync): ditto
	
	* cal-client/client-test.c (list_uids): match new error handling

	* cal-client/cal-marshal.list: marshallers

	* cal-client/cal-listener.[hc]: emit signals for corba listener
	callbacks - start with is_read_only, get_static_capabilities,
	get_cal_address, get_ldap_attribute, open, remove and object_list

	* cal-client/cal-client.h: move the status enum away from here,
	update protos to new thread sync api standard

	* cal-client/cal-client.c: the listener emits signals instead of
	using callback functions now and we return booleans + GError in
	outs for results
	(e_calendar_error_quark): for GError handling
	(cal_read_only_cb): handle listener op callback
	(cal_cal_address_cb): ditto
	(cal_alarm_address_cb): ditto
	(cal_ldap_attribute_cb): ditto
	(cal_static_capabilities_cb): ditto