@@ -1,3 +1,10 @@
+2003-09-09  Rodrigo Moya <rodrigo@ximian.com>
+
+	* pcs/cal-backend-file.c (match_object_sexp): expand recurrences
+	for recurrent objects.
+	(match_recurrence_sexp): add the recurrences that match the query
+	expression to the object list.
+
 2003-09-08  Rodrigo Moya <rodrigo@ximian.com>
 
 	* pcs/cal-backend-file.c: don't store all recurrences in the
